fix misaligned li chord bug

--- a/src/components/editor/components/text-preview-md/text-preview-md.module.css
+++ b/src/components/editor/components/text-preview-md/text-preview-md.module.css
@@ -86,6 +86,10 @@
   @apply absolute bottom-3 left-2 text-amber-500 font-mono text-sm;
 }
 
+.comp li .chord strong {
+  @apply left-0;
+}
+
 .comp .chordGroup {
   @apply whitespace-nowrap;
 }
